--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="innerMain">
             <div class="imgBox">
                 <div class="trainName">
-                    <h1>VANDE BHARAT EX (22458)</h1>
+                    <h1>DDN SHTBDI EXP (12018)</h1>
                     <div class="timeBox">
                         <div class="stationBox">
-                            <h1>07:00<span>DEHRADUN</span></h1>
+                            <h1>16:55<span>DEHRADUN</span></h1>
                             <p>THU, 25 Apr</p>
                         </div>
                         <div class="time">
                             <span></span>
-                            04:45
+                            05:55
                             <span></span>
                         </div>
                         <div class="stationBox">
-                            <h1>11:45<span>ANAND VIHAR TRM</span></h1>
+                            <h1>22:50<span>NEW DELHI</span></h1>
                             <p>THU, 25 Apr</p>
                         </div>
                     </div>
