--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
               </div>
 
               <div class="passDetailBox" id="passenger1">
+                <p class="error"></p>
+
                 <div class="btnGrp">
                   <img class="add" src="./assets/images/plus.png" onclick="addPass('passenger1')"/>
                 </div>
+
                 <div class="passBorder" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
                   <h3>Passenger 1</h3>
                   <img class="delete" src="./assets/images/cross.png" onclick="delPass('passenger1')" />
