--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div class="loaderBox" id="loader">
       <img src="./assets/images/trainLoader.gif" alt="loading......"/>
     </div>
+
+    <div class="loaderBox mssgBox" id="mssgBox">
+      <div class="mssg">
+        <img class="delete mssgCross" src="./assets/images/cross.png" onclick=" hideMssg();" />
+        Fill All Details
+      </div>
+    </div>
+
     <div class="main">
       <div class="innerMain">
         <div class="imgBox">
@@ -21,7 +29,7 @@
             <div class="timeBox">
               <div class="stationBox">
                 <h1>16:55<span>DEHRADUN</span></h1>
-                <p>THU, 25 Apr</p>
+                <p>SAT, 04 MAR</p>
               </div>
               <div class="time">
                 <span></span>
@@ -30,7 +38,7 @@
               </div>
               <div class="stationBox">
                 <h1>22:50<span>NEW DELHI</span></h1>
-                <p>THU, 25 Apr</p>
+                <p>SAT, 04 MAR</p>
               </div>
             </div>
             <div class="coach">AC Chair car (CC) <span>General</span></div>
@@ -130,12 +138,12 @@
             </div>
             <div class="priceDetail tax">
                 <p>Convenience Fee (Incl. of GST)</p>
-                <h4 id="tax">&#8377;35.40</h4>
+                <h4 id="tax">&#8377;37.45</h4>
             </div>
 
             <div class="totalDiv">
                 <h4>Total Fare</h4>
-                <h4 id="total">&#8377;570.40</h4>
+                <h4 id="total">&#8377;572.45</h4>
             </div>
 
             <div class="pay" onclick="book()">Book Now</div>
