--- a/ticket.html
+++ b/ticket.html
@@ -129,7 +129,7 @@
 
                         <div class="to">
                             <p class="head">Arrival</p>
-                            <h1>20:50</h1>
+                            <h1>22:50</h1>
                             <h6>04 MAR 2024</h6>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <h6 id="book" style="font-size: 0.8em;">26 APR 2024 01:11</h6>
+                                <h6 id="bookDate" style="font-size: 0.8em;"></h6>
                             </td>
                         </tr>
                     </table>
